# detectrs

./: .gitignore  Cargo.toml  README.md  example.env
.cargo/: config.toml
src/: comparer.rs  downloader.rs  entities.rs  libsql_access.rs  main.rs  notifications.rs  parser.rs  version_check.rs
src/notifications/: mailtrap_sender.rs  null_sender.rs
testdata/: error_page.html  version_8.4.5.html
