[package]
name = "detectrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
lambda_runtime = { version = "0.14.1", features = ["tracing", "anyhow"] }
lettre = "0.11.16"
libsql = "0.9.7"
reqwest = "0.12.15"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
