[package]
name = "detectrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
lambda_runtime = { version = "0.14.1", features = ["tracing", "anyhow"] }
lettre = { version = "0.11.16", features = ["rustls", "aws-lc-rs", "rustls-native-certs", "builder", "smtp-transport"], default-features = false }
libsql = "0.9.7"
reqwest = { version = "0.12.15", features = ["rustls-tls", "http2", "charset"], default-features = false }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
